--- a/src/main/resources/templates/static/showBlog/css/base.css
+++ b/src/main/resources/templates/static/showBlog/css/base.css
@@ -34,7 +34,7 @@ nav { width: 1000px; margin: auto; position:relative }
 #starlist .sub li { padding: 0 0 0 0; width: 100%; border-bottom: #f5f5f5 1px solid; line-height: 40px; }
 .menu:after { content: ""; position: absolute; right: 0px; top: 30px; width: 0; height: 0; border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid #989898; -ms-transition: all .5s ease; -moz-transition: all .5s ease; -webkit-transition: all .5s ease; -o-transition: all .5s ease; transition: all .5s ease; }/*Èý½ÇÐÎ*/
 #starlist li:hover.menu:after { transform: rotate(180deg) }/*Ðý×ª*/
-#starlist li a:hover ,#starlist #selected,.selected > a { color: #f65a8a; }
+#starlist li a:hover ,#starlist #selected,.selected > a { color: #5aa6f6; }
 /*search*/
 .searchbox{ position:absolute; right:0}
 .search_bar { position: relative; width: 0%; min-width: 60px; height: 60px; float: right; overflow: hidden; -webkit-transition: width 0.3s; -moz-transition: width 0.3s; transition: width 0.3s; -webkit-backface-visibility: hidden; }
