--- a/src/main/resources/templates/static/showBlog/css/index.css
+++ b/src/main/resources/templates/static/showBlog/css/index.css
@@ -18,7 +18,7 @@
 .toppic li i { display: block; opacity: 0.95; -moz-transition: all .5s ease; -webkit-transition: all .5s ease; -ms-transition: all .5s ease; -o-transition: all .5s ease; transition: all .5s ease; overflow: hidden }
 .toppic li i img { width: 100%; height: 196px; }
 .toppic li h2 { color: #fff; display: block; font-weight: normal; font-size: 16px; position: absolute; bottom: 0; padding: 5px 10px; left: 0; right: 0; background:url(../images/tbg.png) repeat-x; }
-.toppic li span { position: absolute; top: 10px; left: 10px; padding: 6px 10px; background: rgba(246, 90, 138, 0.8); font-size: 12px; display: block; color: #FFF; border-radius: 3px; }
+.toppic li span { position: absolute; top: 10px; left: 10px; padding: 6px 10px; background: rgba(24, 90, 138, 0.8); font-size: 12px; display: block; color: #FFF; border-radius: 3px; }
 .toppic li:hover i { opacity: 1; }
 .toppic li:last-child { margin-top: 16px }
 .r_box { width: 30%; float: right }
@@ -43,7 +43,7 @@
 .news_box li img { width: 100%; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; transition: all 0.5s; }
 .news_box li i { width: 120px; display: block; height: 80px; overflow: hidden; float: left; margin-right: 20px }
 .news_box li:hover img { transform: scale(1.05) }
-.news_box li:hover h3 a { color: #f65a8a; }
+.news_box li:hover h3 a { color: #5aa6f6; }
 /*pics*/
 .pics { margin: 20px 0 0 0; overflow: hidden; width: 100%; clear: both }
 .pics ul li { width: 32.3%; float: left; display: block; overflow: hidden; position: relative; }
@@ -58,22 +58,22 @@
 #blogtab { overflow: hidden; zoom: 1; background: #fff; width: 100%; margin: 10px 0 }
 #blogtab li { float: left; height: 40px; cursor: pointer; line-height: 40px; list-style-type: none; padding: 0 20px; }
 #blogtab li a { color: #555 }
-#blogtab li.current, #blogtab li a:hover { color: #f65a8a; }
+#blogtab li.current, #blogtab li a:hover { color: #5aa6f6; }
 #tab { overflow: hidden; zoom: 1; }
 #tab a { float: left; color: #222; padding: 0 15px; border-right: #f2f2f2 1px solid }
 #tab a:last-child { border-right: none }
-#tab a.current { color: #f65a8a; }
+#tab a.current { color: #5aa6f6; }
 #content { margin-bottom: 0 }
 #content ul { display: none; }
 /*blogsbox*/
 .blogsbox { width: 100%; overflow: hidden; float: left }
 .blogs { overflow: hidden; margin-bottom: 20px; padding: 20px; background: #FFF; -webkit-box-shadow: 0 2px 5px 0 rgba(146, 146, 146, .1); -moz-box-shadow: 0 2px 5px 0 rgba(146, 146, 146, .1); box-shadow: 0 2px 5px 0 rgba(146, 146, 146, .1); -webkit-transition: all 0.6s ease; -moz-transition: all 0.6s ease; -o-transition: all 0.6s ease; transition: all 0.6s ease; position: relative }
-.blogs:before { position: absolute; content: ""; width: 3px; height: 20px; background: #f65a8a; left: 0; top: 26px }
+.blogs:before { position: absolute; content: ""; width: 3px; height: 20px; background: #5aa6f6; left: 0; top: 26px }
 .blogs .blogpic { float: left; width: 30%; max-height: 170px; margin-right: 20px; display: block; overflow: hidden; }
 .blogs .blogpic img { width: 100%; height: auto; -webkit-transition: all 0.6s ease; -moz-transition: all 0.6s ease; -o-transition: all 0.6s ease; transition: all 0.6s ease; margin-bottom: 10px }
 .blogs .blogpic :hover img { transform: scale(1.1) }
 .blogs .blogtitle { margin: 0 0 10px 0; font-size: 20px; overflow: hidden; }
-.blogs:hover .blogtitle a { color: #f65a8a; }
+.blogs:hover .blogtitle a { color: #5aa6f6; }
 .blogs .blogtext { font-size: 14px; color: #566573; overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 3; margin-top: 20px }
 .blogs .bloginfo { overflow: hidden; margin-top: 30px; display: block }
 .blogs .bloginfo li { float: left; font-size: 12px; padding: 0 0 0 20px; margin: 0 15px 0 0; color: #748594; line-height: 1.5; display: inline-block; }
@@ -97,7 +97,7 @@
 .bigpic:hover img { opacity: 0.8 }
 .pagelist { text-align: right; color: #666; width: 100%; clear: both;    margin: 25px 0 10px 0; padding-top: 20px }
 .pagelist a { color: #666; margin: 0 2px 10px; border: 1px solid #fff; padding: 5px 10px; background: #FFF;display: inline-block;   }
-.pagelist a:hover { color: #f65a8a; }
+.pagelist a:hover { color: #5aa6f6; }
 .pagelist > b { border: 1px solid #ef254a; padding: 5px 10px; background: #fe4365; color: #FFF }
 a.curPage { color: #19585d; font-weight: bold; }
 /*about*/
@@ -124,6 +124,6 @@ a.curPage { color: #19585d; font-weight: bold; }
 .picinfo span { padding: 10px 20px; display: block; color: #666; }
 .picbox ul li a:hover { color: #19585d }
 .place { margin: 0 0 10px 0; width: 100%; overflow: hidden;background: #fff; }
-.place a { display: block; float: left; padding: 5px 0; background: #fff; margin:0 10px; width:100px; text-align:center  }
+.place a { display: block; float: left; padding: 5px 0; background: #fff; margin:0 10px; text-align:center  }
 #pagecurrent { color: #222;  display: inline-block;    position: relative;text-align:center }
 #pagecurrent:after{ content:"";background:#0da919; width:100px; height:2px;     position: absolute; bottom:0; left:0}
